fix resource-header z-index
before, the resource-header was covered by an invisible element, so
interaction was impossible

--- a/meinberlin/assets/scss/components/_header.scss
+++ b/meinberlin/assets/scss/components/_header.scss
@@ -1,5 +1,6 @@
 .main-header {
     position: relative;
+    z-index: 1;
 
     @media screen and (max-width: $breakpoint) {
         padding: 0.5em 0;
@@ -184,6 +185,5 @@
 .resource-header {
     &:first-child {
         margin-top: -35px;
-        z-index: -1;
     }
 }
